--- a/mazda.html
+++ b/mazda.html
@@ -47,16 +47,17 @@
       <!-- Main Image + Thumbnails -->
       <div class="project-images">
         <div class="main-image">
-          <img id="mainPreview" src="images/cacao home mockup.png" alt="home mockup" />
+          <img id="mainPreview" src="images/Mazda slide 1.JPG" alt="CONTEXT" />
         </div>
 
         <div class="thumbnail-gallery">
-          <img src="images/cacao home mockup.png" alt="home mockup" class="active" onclick="setMainImage(this)" />
-          <img src="images/cacao_color.jpg" alt="color" onclick="setMainImage(this)" />
-          <img src="images/cacao_moodboard.jpg" alt="moodboard" onclick="setMainImage(this)" />
-          <img src="images/cacao_sitemap.jpg" alt="site map" onclick="setMainImage(this)" />
-          <img src="images/cacao_wireframes.jpg" alt="wireframes" onclick="setMainImage(this)" />
-          <img src="images/cacao_persona.jpg" alt="persona" onclick="setMainImage(this)" />
+          <img src="images/Mazda slide 1.JPG" alt="CONTEXT" class="active" onclick="setMainImage(this)" />
+          <img src="images/Mazda slide 2.JPG" alt="OBSERVATION" onclick="setMainImage(this)" />
+          <img src="images/Mazda slide 3.JPG" alt="JOURNEY MAP" onclick="setMainImage(this)" />
+          <img src="images/Mazda slide 4.JPG" alt="SISTEM MAP" onclick="setMainImage(this)" />
+          <img src="images/Mazda slide 5.JPG" alt="wireframes" onclick="setMainImage(this)" />
+          <img src="images/Mazda slide 6.JPG" alt="CATEGORIZE" onclick="setMainImage(this)" />
+          <img src="images/Mazda slide 7.JPG" alt="PRIORITIZATION" onclick="setMainImage(this)" />
         </div>
       </div>
 
@@ -66,9 +67,10 @@
         <p class="project-subtitle">User experience research</p>
         <p>
         Applied Design Thinking to improve customer experience at Mazda dealerships focused on the 
-        post purchase service.<br> Conducted user interviews and field observations to identify the 
-        pain points of the experience and generate an action plan. Created user journey maps, empathy 
-        maps and prototypes.
+        post purchase service to identify key points to acomplish improvements in the experience.<br> 
+        Conducted user interviews and field observations to identify all the service experience
+        and generate an action plan. We used tools such user journey maps, Interviews, empathy maps 
+        and reports.
         </p>
         <h3>Skills & Tools Used</h3>
         <ul class="project-skills">
@@ -76,7 +78,7 @@
           <li>Reseach</li>
           <li>testing</li>
           <li>Conceptualization</li> 
-          <li>Prototyping</li>
+          <li>Communication</li>
         </ul>
       </div>
     </div>
