--- a/ux-ui.html
+++ b/ux-ui.html
@@ -51,7 +51,7 @@
           <h3>CACAO</h3>
         </a>
         <a href="mazda.html" class="project-card">
-          <div class="project-thumb"></div>
+          <div class="project-thumb" style="background-image: url('images/mazda_cover_mockup.png');"></div>
           <h3>MAZDA CASATORO</h3>
         </a>
       </div>
