--- a/ana_valentina.html
+++ b/ana_valentina.html
@@ -63,8 +63,8 @@
 
       <!-- Project Info -->
       <div class="project-info">
-        <h1>Mazda CasaToro Dealearships</h1>
-        <p class="project-subtitle">User experience research</p>
+        <h1>Ana Valentina Fundation</h1>
+        <p class="project-subtitle">App design</p>
         <p>
         Applied Design Thinking to improve customer experience at Mazda dealerships focused on the 
         post purchase service to identify key points to acomplish improvements in the experience.<br> 
