--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
       <div class="carousel-wrapper">
         <button class="carousel-btn prev">‹</button>
         <div class="carousel-track">
+          <a href="newprint.html" class="carousel-slide" style="background-image: url('images/newprint\ render\ packaging-4-04.png'); background-size: cover;">
+            <div class="project-title"><h2>newprint</h2></div>
+          </a>
           <a href="proyecformas.html" class="carousel-slide" style="background-image: url('images/Proyecformas_fichas_tecnicas.jpg'); background-size: cover;">
             <div class="project-title"><h2>Proyecformas</h2></div>
           </a>
