--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <title>Contact | Juan Quintero Portfolio</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="Icon.png" type="image/png">
-  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">\
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <script defer>
     // Toggle burger menu
     document.addEventListener("DOMContentLoaded", function () {
