--- a/barvaro.html
+++ b/barvaro.html
@@ -65,11 +65,11 @@
       <h1>Barvaro</h1>
       <p class="project-subtitle">Colombian Coffee Brand and Packaging Design</p>
       <p>
-        Barvaro is a Bogota Coffee shop brand. identity and packaging concept for a coffee startup.
+        Barvaro is a Bogota Coffee/ Beer garden. My work was centered on the brand identity and packaging concept.
         From the design perspective, we aim to have a clean and modern color palet playing with the clear wood
         finishing of the phisical space.<br>
       
-        The design emphasizes authenticity and uses as main tools the photography and typhography as the visual keys of the brand.
+        The design emphasizes authenticity and uses as main tools the photography and typography as the visual keys of the brand.
         It balances bold typography with clean layouts and uses warm, earthy colors inspired by the beer garden spaces.
         My rol here went from conceptualizing to the execution of the idea having as a final result a brand guideline of the brand,
         the menu and the packaging dieline.
