--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul class="nav-links">
           <li><a href="about.html">About Me</a></li>
           <li><a href="product-design.html">Industrial Design</a></li>
-          <li><a href="graphic-design.html">Graphic Design</a></li>
+          <li><a href="graphic design.html">Graphic Design</a></li>
           <li><a href="ux-ui.html">UX/UI</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
