--- a/about.html
+++ b/about.html
@@ -51,15 +51,12 @@
         </div>
         <div class="about-text">
           <h2>About Me</h2>
-          <p>I’m a Designer skilled in <b>User Experience, 3D modeling,<br>
-     graphic design, packaging design,</b> among others.</p>
-     <p> Expertise centers around crafting solutions via<br>
-     product design, photography, and the integration<br>
-     of emerging technologies.</p>
-     <p>I stand out for my commitment, attention to detail, <br>
-     and collaborative spirit. In team environments, within<br>
-     multidisciplinary teams, I actively contribute to project <br>
-     creation and execution.</p>
+          <p>Multidisciplinary UX/UI designer with 4+ years of experience applying <strong>design,
+            prototyping, service design and visual communication</strong>  across digital and physical products. 
+            With strong skills in Adobe Creative Suite, Figma, Microsoft suite and 3D visualization tools.<br>
+            Experienced in design thinking and user centered design, while keeping consistancy with company identity and values. Able to
+collaborate in fast-paced environments, advocating for accessibility (WCAG), testing and production compliance. Currently learning
+about Project Management, coding and French. Fluent in English and Spanish.</p>
         </div>
       </div>
     </section>
