--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         <ul class="nav-links">
           <li><a href="about.html">About Me</a></li>
           <li><a href="product-design.html">Industrial Design</a></li>
-          <li><a href="graphic-design.html">Graphic Design</a></li>
+          <li><a href="graphic design.html">Graphic Design</a></li>
           <li><a href="ux-ui.html">UX/UI</a></li>
           <li><a href="contact.html"><b>Contact</b></a></li>
         </ul>
