--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <ul class="nav-links">
           <li><a href="about.html"><b>About Me</b></a></li>
           <li><a href="product-design.html">Industrial Design</a></li>
-          <li><a href="graphic-design.html">Graphic Design</a></li>
+          <li><a href="graphic design.html">Graphic Design</a></li>
           <li><a href="ux-ui.html">UX/UI</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -77,7 +77,7 @@ about Project Management, coding and French. Fluent in English and Spanish.</p>
           <li>Hubspot</li>
           <li>Miro</li>
           <li>Microsoft Suite</li>
-          <li>html</li>
+          <li>html / CSS</li>
         </ul>
       <div class="skills-block">
         <h2>Soft skills</h2>
@@ -120,12 +120,12 @@ about Project Management, coding and French. Fluent in English and Spanish.</p>
        <div class="footer-links">
          <a href="about.html">About Me</a>
          <a href="product-design.html">Industrial Design</a>
-         <a href="graphic-design.html">Graphic Design</a>
+         <a href="graphic design.html">Graphic Design</a>
          <a href="ux-ui.html">UX/UI</a>
          <a href="contact.html">Contact</a>
        </div>
        <h4>Contact: juancquinteroma@gmail.com</h4>
-       <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
+       <h4>&copy; 2026 Juan Quintero. All rights reserved.</h4>
     </div>
   </footer>
    <script>
