--- a/ux-ui.html
+++ b/ux-ui.html
@@ -54,6 +54,10 @@
           <div class="project-thumb" style="background-image: url('images/mazda_cover_mockup.png');"></div>
           <h3>MAZDA CASATORO</h3>
         </a>
+        <a href="quilichao.html" class="project-card">
+          <div class="project-thumb" style="background-image: url('images/QuilichaoYoutube.jpg');"></div>
+          <h3>SERVICE DESIGN: QUILICHAO</h3>
+        </a>
       </div>
     </section>
   </main>
@@ -68,7 +72,7 @@
        <div class="footer-links">
          <a href="about.html">About Me</a>
          <a href="product-design.html">Industrial Design</a>
-         <a href="graphic-design.html">Graphic Design</a>
+         <a href="graphic design.html">Graphic Design</a>
          <a href="ux-ui.html">UX/UI</a>
          <a href="contact.html">Contact</a>
        </div>
