--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@ about Project Management, coding and French. Fluent in English and Spanish.</p>
       </div>
     </section>
 
-    <section class="skills">
+    <section class="skills-section">
       <div class="skills-block">
         <h2>Digital skills</h2>
         <ul class="project-skills">
@@ -99,9 +99,9 @@ about Project Management, coding and French. Fluent in English and Spanish.</p>
       <div class="skills-block">
         <h2>Languages</h2>
         <ul class="project-skills">
-          <li><p>English: Advanced</p></li>
-          <li><p>Spanish: Native</p></li>
-          <li><p>French: Basic</p></li>
+          <li>English: Advanced</li>
+          <li>Spanish: Native</li>
+          <li>French: Basic</li>
         </ul>
       </div>
       </div>
