--- a/contact.html
+++ b/contact.html
@@ -81,12 +81,12 @@
        <div class="footer-links">
          <a href="about.html">About Me</a>
          <a href="product-design.html">Industrial Design</a>
-         <a href="graphic-design.html">Graphic Design</a>
+         <a href="graphic design.html">Graphic Design</a>
          <a href="ux-ui.html">UX/UI</a>
          <a href="contact.html">Contact</a>
        </div>
        <h4>Contact: juancquinteroma@gmail.com</h4>
-       <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
+       <h4>&copy; 2026 Juan Quintero. All rights reserved.</h4>
     </div>
   </footer>
     <script>
