--- a/index.html
+++ b/index.html
@@ -71,17 +71,37 @@
       <div class="carousel-wrapper">
         <button class="carousel-btn prev">‹</button>
         <div class="carousel-track">
-          <a href="newprint.html" class="carousel-slide" style="background-image: url('images/newprint\ render\ packaging-4-04.png'); background-size: cover;">
-            <div class="project-title"><h2>newprint</h2></div>
+          <a href="newprint.html" class="carousel-slide" style="--bg:url('images/newprint-render-packaging-4-04.png'); background-size: cover;">
+          <div class="carousel-overlay"></div>
+          <div class="carousel-content">
+             <h3>Newprint</h3>
+              <span>Packaging · Sustainability</span>
+              <span class="view-project">View project →</span>
+            </div>
           </a>
-          <a href="proyecformas.html" class="carousel-slide" style="background-image: url('images/Proyecformas_fichas_tecnicas.jpg'); background-size: cover;">
-            <div class="project-title"><h2>Proyecformas</h2></div>
+          <a href="proyecformas.html" class="carousel-slide" style="--bg:url('images/Proyecformas_fichas_tecnicas.jpg'); background-size: cover;">
+           <div class="carousel-overlay"></div>
+          <div class="carousel-content">
+             <h3>Projecformas</h3>
+              <span>Furniture · CAD Production</span>
+              <span class="view-project">View project →</span>
+            </div>
           </a>
-          <a href="cacao.html" class="carousel-slide" style="background-image: url('images/cacao home mockup.png'); background-size: cover;">
-            <div class="project-title"><h2>Cacao</h2></div>
+          <a href="cacao.html" class="carousel-slide" style="--bg:url('images/cacao home mockup.png'); background-size: cover;">
+           <div class="carousel-overlay"></div>
+          <div class="carousel-content">
+             <h3>Cacao</h3>
+              <span>UX Design · prototyping</span>
+              <span class="view-project">View project →</span>
+            </div>
           </a>
           <a href="barvaro.html" class="carousel-slide" style="background-image: url('images/barvaro_thumbnail.png'); background-size: cover;">
-            <div class="project-title"><h2>Barvaro</h2></div>
+           <div class="carousel-overlay"></div>
+          <div class="carousel-content">
+             <h3>Barvaro</h3>
+              <span>Graphic Design · Branding</span>
+              <span class="view-project">View project →</span>
+            </div>
           </a>
         </div>
         <button class="carousel-btn next">›</button>
