--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
           <div class="carousel-overlay"></div>
           <div class="carousel-content">
              <h3>Newprint</h3>
-              <span>Packaging · Sustainability</span>
-              <span class="view-project">View project →</span>
+             <span>Packaging · Sustainability</span>
+             <span class="view-project">View project →</span>
             </div>
           </a>
           <a href="proyecformas.html" class="carousel-slide" style="--bg:url('images/Proyecformas_fichas_tecnicas.jpg'); background-size: cover;">
            <div class="carousel-overlay"></div>
           <div class="carousel-content">
-             <h3>Projecformas</h3>
+             <h3>Proyecformas</h3>
               <span>Furniture · CAD Production</span>
               <span class="view-project">View project →</span>
             </div>
