--- a/graphic design.html
+++ b/graphic design.html
@@ -78,8 +78,17 @@
          <a href="contact.html">Contact</a>
        </div>
        <h4>Contact: juancquinteroma@gmail.com</h4>
-       <h4>&copy; 2025 Juan Quintero. All rights reserved.</h4>
+       <h4>&copy; 2026 Juan Quintero. All rights reserved.</h4>
     </div>
   </footer>
+  <script>
+    function scrollToTop() {
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  }
+  window.addEventListener("scroll", () => {
+    const header = document.querySelector("header");
+    header.classList.toggle("scrolled", window.scrollY > 10);
+  });
+  </script>
 </body>
 </html>
