--- a/ux-ui.html
+++ b/ux-ui.html
@@ -81,6 +81,9 @@
     </div>
   </footer>
     <script>
+    function scrollToTop() {
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  }
   window.addEventListener("scroll", () => {
     const header = document.querySelector("header");
     header.classList.toggle("scrolled", window.scrollY > 10);
